--- a/about/index.html
+++ b/about/index.html
@@ -137,7 +137,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure><img src="../images/eu_caggiano.jpeg"/>
 </figure>
 
-<p>I have a MSc in Data Science, an MA in History and I am constantly learning new skills and technologies. I believe the best solution is not necessarily the shiniest one or the one that follows the latest hype, but the one that works best for the specific use case in question. My diversified work experience before migrating to the world of data allowed me to develop my communication and organizational skills, and I love explaining complicated concepts in easy-to-understand language. Want to know more? Feel free to <a href="../contact">contact</a> me!</p>
+<p>I have an MSc in Data Science, an MA in History and I am constantly learning new skills and technologies. I believe the best solution is not necessarily the shiniest one or the one that follows the latest hype, but the one that works best for the specific use case in question. My diversified work experience before migrating to the world of data allowed me to develop my communication and organizational skills, and I love explaining complicated concepts in easy-to-understand language. Want to know more? Feel free to <a href="../contact">contact</a> me!</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
