--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <main class="pb7" role="main">
       
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-    <p>I am André, a data scientist based in Rotterdam passionate about the full spectrum of the data product life-cycle. You can find information about some of my past projects on this website. Please keep in mind it&rsquo;s still under construction, so stay tuned for more content in the near future :)</p>
+    <p>I am André, a data practitioner based in Rotterdam passionate about the full spectrum of the data product life-cycle. You can find information about some of my past projects on this website. Please keep in mind it&rsquo;s still under construction, so stay tuned for more content in the near future :)</p>
 
   </article>
   
