Update contact email

--- a/contact/index.html
+++ b/contact/index.html
@@ -142,7 +142,7 @@
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
         <p>Here are a couple of ways of reaching me:</p>
-<p>📧 Email: osvaldoag [at] gmail [dot] com</p>
+<p>📧 Email: andregarciaengineering [at] gmail [dot] com</p>
 <p>💻 LinkedIn: <a href="https://www.linkedin.com/in/andre-garcia-/">https://www.linkedin.com/in/andre-garcia-/</a></p>
 
       </div>
